# prime_select

./: ISSUES  LICENSE  Makefile  README.md  prime_switch.c
src/: 10-intel.conf  10-nvidia.conf  Makefile.in  aclocal.m4  compile.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  prime_switch.c  prime_switch.glade
src/autom4te.cache/: output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
